Fix sidebar collapse bug after resizing

--- a/app/static/css/layout/sidebar.css
+++ b/app/static/css/layout/sidebar.css
@@ -12,8 +12,8 @@
 }
 
 .sidebar.collapsed {
-    width: 0;
-    min-width: 0;
+    width: 0 !important;
+    min-width: 0 !important;
     border-right: none;
 }
 
